@@ -3655,6 +3655,7 @@ STR_6454    :Can’t rename banner…
 STR_6455    :Can’t rename sign…
 STR_6456    :Giant Screenshot
 STR_6457    :Report a bug on GitHub
+STR_6458    :Follow this on Main View
 
 #############
 # Scenarios #
