@@ -7,6 +7,7 @@
  * OpenRCT2 is licensed under the GNU General Public License version 3.
  *****************************************************************************/
 
+#include <openrct2-ui/interface/Dropdown.h>
 #include <openrct2-ui/interface/Viewport.h>
 #include <openrct2-ui/interface/Widget.h>
 #include <openrct2-ui/windows/Window.h>
@@ -148,6 +149,8 @@ static void window_guest_common_invalidate(rct_window* w);
 static void window_guest_overview_close(rct_window *w);
 static void window_guest_overview_resize(rct_window *w);
 static void window_guest_overview_mouse_up(rct_window *w, rct_widgetindex widgetIndex);
+static void window_guest_overview_mouse_down(rct_window *w, rct_widgetindex widgetIndex, rct_widget *widget);
+static void window_guest_overview_dropdown(rct_window *w, rct_widgetindex widgetIndex, int32_t dropdownIndex);
 static void window_guest_overview_paint(rct_window *w, rct_drawpixelinfo *dpi);
 static void window_guest_overview_invalidate(rct_window *w);
 static void window_guest_overview_viewport_rotate(rct_window *w);
@@ -156,6 +159,8 @@ static void window_guest_overview_text_input(rct_window *w, rct_widgetindex widg
 static void window_guest_overview_tool_update(rct_window* w, rct_widgetindex widgetIndex, const ScreenCoordsXY& screenCoords);
 static void window_guest_overview_tool_down(rct_window* w, rct_widgetindex widgetIndex, const ScreenCoordsXY& screenCoords);
 static void window_guest_overview_tool_abort(rct_window *w, rct_widgetindex widgetIndex);
+static void window_guest_follow(rct_window *w);
+static void window_guest_show_locate_dropdown(rct_window* w, rct_widget* widget);
 
 static void window_guest_mouse_up(rct_window *w, rct_widgetindex widgetIndex);
 
@@ -186,6 +191,8 @@ static rct_window_event_list window_guest_overview_events([](auto& events)
 {
     events.close = &window_guest_overview_close;
     events.mouse_up = &window_guest_overview_mouse_up;
+    events.mouse_down = &window_guest_overview_mouse_down;
+    events.dropdown = &window_guest_overview_dropdown;
     events.resize = &window_guest_overview_resize;
     events.update = &window_guest_overview_update;
     events.tool_update = &window_guest_overview_tool_update;
@@ -606,9 +613,6 @@ void window_guest_overview_mouse_up(rct_window* w, rct_widgetindex widgetIndex)
                 w, widgetIndex, STR_GUEST_RENAME_TITLE, STR_GUEST_RENAME_PROMPT, {}, peepName.c_str(), 32);
             break;
         }
-        case WIDX_LOCATE:
-            w->ScrollToViewport();
-            break;
         case WIDX_TRACK:
         {
             uint32_t flags = peep->PeepFlags ^ PEEP_FLAGS_TRACKING;
@@ -618,6 +622,51 @@ void window_guest_overview_mouse_up(rct_window* w, rct_widgetindex widgetIndex)
         }
         break;
     }
+}
+
+static void window_guest_overview_mouse_down(rct_window* w, rct_widgetindex widgetIndex, rct_widget* widget)
+{
+    switch (widgetIndex)
+    {
+        case WIDX_LOCATE:
+            window_guest_show_locate_dropdown(w, widget);
+            break;
+    }
+}
+
+static void window_guest_overview_dropdown(rct_window* w, rct_widgetindex widgetIndex, int32_t dropdownIndex)
+{
+    switch (widgetIndex)
+    {
+        case WIDX_LOCATE:
+        {
+            if (dropdownIndex == 0)
+            {
+                w->ScrollToViewport();
+            }
+            else if (dropdownIndex == 1)
+            {
+                window_guest_follow(w);
+            }
+            break;
+        }
+    }
+}
+
+static void window_guest_show_locate_dropdown(rct_window* w, rct_widget* widget)
+{
+    gDropdownItemsFormat[0] = STR_LOCATE_SUBJECT_TIP;
+    gDropdownItemsFormat[1] = STR_FOLLOW_SUBJECT_TIP;
+
+    WindowDropdownShowText(
+        { w->windowPos.x + widget->left, w->windowPos.y + widget->top }, widget->height() + 1, w->colours[1], 0, 2);
+    gDropdownDefaultIndex = 0;
+}
+
+static void window_guest_follow(rct_window* w)
+{
+    rct_window* w_main = window_get_main();
+    window_follow_sprite(w_main, w->number);
 }
 
 /**
