@@ -3911,6 +3911,8 @@ enum
 
     STR_FILE_BUG_ON_GITHUB = 6457,
 
+    STR_FOLLOW_SUBJECT_TIP = 6458,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
